--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header no-border translucent>
-  <ion-toolbar color="light" class="ion-text-uppercase">
+  <ion-toolbar color="primary" class="ion-text-uppercase">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
