--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,11 +30,11 @@
               <i slot="start" class="material-icons-outlined">business</i>
               <ion-label>Sucursales</ion-label>
             </ion-item>  
-            <ion-item routerLink="/lista-encuesta" color="light">
+            <ion-item routerLink="/encuesta-simple" color="light">
               <i slot="start" class="material-icons-outlined">library_books</i>
-              <ion-label>Encuestas disponibles</ion-label>
+              <ion-label>Encuestas v1.0</ion-label>
             </ion-item>    
-            <ion-item color="light" (click)="logOut()">
+            <ion-item color="light" routerLink="/login" >
               <i slot="start" class="material-icons-outlined">exit_to_app</i>
               <ion-label>Salir</ion-label>
             </ion-item>
