--- a/src/app/pages/encuesta/encuesta.page.html
+++ b/src/app/pages/encuesta/encuesta.page.html
@@ -197,4 +197,26 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-card color="light" class="login-box-centered">
+    <ion-toolbar color="background">
+      <div class="ion-text-center">
+        <h5>Datos generales</h5>
+      </div>
+    </ion-toolbar>
+    <ion-card-content color="light">
+      <ion-item color="background">
+        <ion-label position="floating">Nombre</ion-label>
+        <ion-input></ion-input>
+      </ion-item>
+
+      <ion-item color="background">
+        <ion-label position="floating">Escriba un breve comentario</ion-label>
+        <ion-textarea></ion-textarea>
+      </ion-item>
+      <ion-button color="success" shape="round" expand="full" fill="solid">Guardar encuesta</ion-button>
+    </ion-card-content>
+  </ion-card>
+
+
+
 </ion-content>
