--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,7 @@
 <app-menu [titulo]="titulo"></app-menu>
 
-<ion-content class="padding">
-
+<ion-content class="padding ion-item align-self-center>" color="primary">
+    <ion-item class="ion-item align-self-center>">
+        <ion-img class="ion-item align-self-center>" src="../../../assets/logo.png"></ion-img>
+    </ion-item>
 </ion-content>
