--- a/src/app/pages/usuario/login/login.page.scss
+++ b/src/app/pages/usuario/login/login.page.scss
@@ -1,7 +1,28 @@
-.btn-empresa {
-  padding-left: 15%;
+ion-content {
+  width: 100% auto !important;
 }
+img{
+  display:block;
+  margin:auto;
+  }
 
-.btn-mype {
-  padding-right: 15%;
+.div_mayor{
+  margin-bottom: 20px;
+  width:auto;
+  margin:auto;
+  height: 200px auto;
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  ion-button {
+      height: 45px;
+      margin-top: 10px !important;
+  }
+  ion-item{
+      padding: 3px;
+      margin-top: 10px !important;        
+      border-radius: 10px;
+      border-style: solid;
+      border-color: #00838f;        
+  }  
 }
