--- a/src/app/pages/encuesta-simple/encuesta-simple.page.html
+++ b/src/app/pages/encuesta-simple/encuesta-simple.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 <ion-content color="dark">
   <ion-slides>
+
     <ion-slide>
       <ion-card color="light" class="login-box-centered">
         <ion-card-header color="background">
@@ -17,11 +18,12 @@
           <ion-grid class=" ion-text-center">
             <ion-row>
               <ion-col class="ion-no-padding" size-lg="3" size-md="3" size-sm="12" size="12"
-                *ngFor="let opcion of [1,1,1,1]; let i = index">
+                *ngFor="let opcion of opciones; let i = index">
                 <ion-item>
-                  <ion-avatar slot="start">
-                    <img src="https://i0.pngocean.com/files/27/957/129/emoji-smirk-snapchat-smiley-whatsapp-emoji.jpg">
-                  </ion-avatar>
+                  <ion-thumbnail slot="start">
+                    <img [src]="opcion.imagen">
+                  </ion-thumbnail>
+                  <ion-label>{{ opcion.opcion }}</ion-label>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -33,10 +35,22 @@
     <ion-slide>
       <ion-card color="light" class="login-box-centered">
         <ion-card-header color="background">
-          <ion-card-title>¿Que piensas del diseño de este aplicativo movil?</ion-card-title>
+          <ion-card-title>¿Cual es tu fruta favorita?</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          ¿Que piensas del diseño de este aplicativo movil?
+          <ion-grid class=" ion-text-center">
+            <ion-row>
+              <ion-col class="ion-no-padding" size-lg="3" size-md="3" size-sm="12" size="12"
+                *ngFor="let opcion of opciones2; let i = index">
+                <ion-item>
+                  <ion-thumbnail slot="start">
+                    <img [src]="opcion.imagen">
+                  </ion-thumbnail>
+                  <ion-label>{{ opcion.opcion }}</ion-label>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </ion-card-content>
       </ion-card>
     </ion-slide>
@@ -44,21 +58,19 @@
     <ion-slide>
       <ion-card color="light" class="login-box-centered">
         <ion-card-header color="background">
-          <ion-card-title>¿Que piensas del diseño de este aplicativo movil?</ion-card-title>
+          <ion-card-title>Datos generales</ion-card-title>
         </ion-card-header>
-        <ion-card-content>
-          ¿Que piensas del diseño de este aplicativo movil?
-        </ion-card-content>
-      </ion-card>
-    </ion-slide>
+        <ion-card-content color="light">
+          <ion-item color="background">
+            <ion-label position="floating">Nombre</ion-label>
+            <ion-input></ion-input>
+          </ion-item>
 
-    <ion-slide>
-      <ion-card color="light" class="login-box-centered">
-        <ion-card-header color="background">
-          <ion-card-title>¿Que piensas del diseño de este aplicativo movil?</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          ¿Que piensas del diseño de este aplicativo movil?
+          <ion-item color="background">
+            <ion-label position="floating">Escriba un breve comentario</ion-label>
+            <ion-textarea></ion-textarea>
+          </ion-item>
+          <ion-button color="success" shape="round" expand="full" fill="solid">Guardar encuesta</ion-button>
         </ion-card-content>
       </ion-card>
     </ion-slide>
