--- a/src/app/pages/encuesta-simple/encuesta-simple.page.scss
+++ b/src/app/pages/encuesta-simple/encuesta-simple.page.scss
@@ -10,12 +10,12 @@ ion-slides {
     margin-top: 2.8rem;
   }
 
-  .swiper-slide img {
-    max-height: 50%;
-    max-width: 80%;
-    margin: 60px 0 40px;
-    pointer-events: none;
-  }
+  // .swiper-slide img {
+  //   max-height: 50%;
+  //   max-width: 80%;
+  //   margin: 60px 0 40px;
+  //   pointer-events: none;
+  // }
 
   b {
     font-weight: 500;
@@ -41,4 +41,9 @@ ion-slides {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+  }
+
+  .item{
+    margin:10px auto;
+    border-radius: 15px !important;
   }
